# nexisgen

./: .env.example  .gitignore  README.md  config.json  pyproject.toml  verify_validator_score.py
docker/: Dockerfile.validation-api  Dockerfile.validator  README.md  compose.env.example  docker-compose.owner-sync-worker.yml  docker-compose.source-auth-validator.yml  docker-compose.trainer.yml  docker-compose.validation-api.yml  docker-compose.validator.yml  trainer.env.example  validation-api.env.example  validator.env.example
docs/: miner.md  validator.md
eligibility/: blacklist_hotkeys.json  invalid_hotkeys.json
nexis/: cli.py  config.py  protocol.py  scoring.py
nexis/api/: app.py  auth.py  repository.py  schemas.py
nexis/chain/: credentials.py  weights.py
nexis/miner/: captioner.py  pipeline.py  providers.py  youtube.py
nexis/storage/: eval_data.py  r2.py  shared_bucket.py
nexis/validator/: assets.py  checks.py  dataset_check.py  eligibility.py  local_scores.py  owner_sync.py  pipeline.py  reporting.py  training.py  vbench_scorer.py
tests/: helpers.py  test_anti_cheat.py  test_api_app.py  test_cli_async_helpers.py  test_dataset_check.py  test_e2e_validator.py  test_eligibility_store.py  test_local_scores.py  test_sampling.py  test_score_signature.py  test_scoring.py  test_total_score_payload.py  test_training_phases.py  test_validator_assets.py  test_validator_history_filter.py  test_validator_owner_sync.py  test_validator_reporting.py
